<resources>

    <string name="username_prefix">\@%1$s</string>

    <string name="app_name">Twitter Client</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="error_happened_in_authentication">An error happened during authentication</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="tweets">Tweets</string>

    <plurals name="tweet_or_tweets">
        <item quantity="one">%1$d tweet</item>
        <item quantity="other">%1$d tweets</item>
    </plurals>

    <plurals name="years">
        <item quantity="one">%1$d year</item>
        <item quantity="other">%1$d years</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%1$d month</item>
        <item quantity="other">%1$d months</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%1$d day</item>
        <item quantity="other">%1$d days</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%1$d hour</item>
        <item quantity="other">%1$d hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="one">%1$d second</item>
        <item quantity="other">%1$d seconds</item>
    </plurals>
    <string name="home">Home</string>
    <string name="night_mode">Night Mode</string>
    <string name="manage_account">Manage Account</string>
    <string name="add_account">Add Account</string>
    <string name="settings">Settings</string>
    <string name="filters">Filters</string>
    <string name="rate_limit_reached">Rate Limit Reached</string>
    <string name="pages">Pages</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="add_page">Add a page</string>
    <string name="mentions">Mentions</string>
    <string name="messages">Messages</string>
    <string name="list">List</string>
    <string name="favorites">Favorites</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
</resources>
