<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="title"
    android:divider="@color/colorPrimary">

    <PreferenceCategory
        android:title="This is title">
        <!-- A 'parent' preference, which enables/disables child preferences (below)
     when checked/unchecked. -->

        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_title_new_message_notifications"
            />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:icon="@drawable/ic_view_carousel_24"
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="2nd category">

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />

    </PreferenceCategory>

</PreferenceScreen>
